--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 transformers
 evaluate 
 accelerate
+imbalanced-learn
+
 
 anyio @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a17a7759g2/croot/anyio_1706220182417/work
 appnope @ file:///Users/cbousseau/work/recipes/ci_py311/appnope_1677917710869/work
