--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ transformers
 evaluate 
 accelerate
 imbalanced-learn
+gpt2
+torch
 
 
 anyio @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a17a7759g2/croot/anyio_1706220182417/work
